--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ header {
   align-items: center;
 
   padding: 8px 16px;
-  border: 1px solid var(--card-title-border-color);
+  border: 1px solid #f7dd43;
   border-radius: 6px;
 
   width: fit-content;
