--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ header {
   padding: 32px 23px;
   text-align: center;
 
-  background: #202024;
+  background: #20202471;
   border-bottom: 1px solid #338af3;
   border-radius: 6px;
 }
@@ -66,6 +66,12 @@ header {
   color: #e1e1e6;
   font-size: 14px;
   text-transform: uppercase;
+}
+
+.card h3  {
+  color: #e1e1e6;
+  text-transform: uppercase;
+  padding-bottom: 16px;
 }
 
 .card ul {
@@ -122,10 +128,42 @@ header {
   }
 }
 
-@media (min-width: 800px) {
+@media (min-width: 1024px) {
   #cards {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+
+    flex-direction: row;
+    align-items: flex-start;
+
+    max-width: fit-content;
+  }
+}
+header h1 {
+  background: linear-gradient(
+    180deg,
+    #ffffff 0%,
+    rgba(217, 217, 217, 0.8) 100%
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+
+  margin: 0;
+}
+
+
+header img {
+  width: 120px;
+}
+header h1 {
+  font-size: 30px;
+  font-family: 'Roboto', sans-serif;
+
+}
+
+/*#cards {
     max-width: 670px;
     flex-direction: row;
     flex-wrap: wrap;
-  }
-}
+  }*/
